src/tests/testfiles/binary-operators/types-27.txt
testfiles/binary-operators/types-27.c:2:5: error: invalid operands to logical 'or' (have 'int' and 'float')
0 || 0.4;
^
